# dotfiles

./: .tmux.conf  README.md  bashrc  profile  tmux.conf  zshrc
.config/dunst/: dunstrc
.config/polybar/: colors.ini  modules.ini  system.ini
config/LuaSnip/: markdown.lua
config/dunst/: dunstrc
config/i3/: config
config/julia/: startup.jl
config/keyd/: default.conf
config/kitty/: kitty.conf  theme.conf
config/nvim/: init.lua  lazy-lock.json  old_init.lua
config/polybar/: colors.ini  config-cat.ini  config.ini  launch.sh  modules.ini  system.ini
config/rofi/: config.rasi
config/sioyek/: keys_user.config  prefs_user.config
config/starship/: starship.toml
config/taskwarrior/: taskrc
config/tmux/: tmux.conf
config/zathura/: zathurarc
other/: haikus.json
scripts/course-management/: compile_notes.py  generate_course.sh  mdpp.py  note.py  note.sh  notec.sh  rofi.py  test.md  todo.md  tulok.py
scripts/i3/: battery-notify.sh  battery_notify.py  filename.py  find_papers  find_papers.c  find_papers.sh  find_pdfs  find_pdfs.sh  findpdfs  findpdfs.c  power-manager-menu.sh  quick-note-old.py  quick-note.py  quick-note.sh  reminders.sh  rofi.py
scripts/note/: config.toml  note.py
scripts/tmux/: get_battery_left.sh  haiku  sessionizer-git.sh  tmux-chtsh  tmux-dasht  tmux-fzfer  tmux-quicknote  tmux-quicktask  tmux-sessionizer  tmux-tasks  tmux-trans  (+1 more)
templates/: CMakeLists.txt  header.tex  paper.tex
tmuxifier/: julia.session.sh  julia.window.sh  matlab.session.sh  matlab.window.sh  python.session.sh  python.window.sh  r.session.sh  r.window.sh
(+37 files in other folders)
